--- a/index.html
+++ b/index.html
@@ -7,13 +7,17 @@
     <title>DSMovie</title>
 
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-<link rel="stylesheet" href="css/slyles.css">
+<link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
-    <h1>Olá DS Movie</h1>
-    <h2>Promoções</h2>
-    <h2>Agenda de Filmes
+    <header>
+        <nav class="container">
+            <h1>DSMovie</h1>
+            <a href="https://github.com/kellyclemos">/kellyclemos</a>
+        </nav>
+
+    </header>
         
     </h2>
 </body>
