--- a/index.html
+++ b/index.html
@@ -20,12 +20,23 @@
                 <img src="img/github.svg" alt="Github">
                 <a href="https://github.com/kellyclemos">/kellyclemos</a>
             </div>
-
         </nav>
-
     </header>
+  
+    <main>
+        <section id="dsmovie-card-list" class="container">
+            <div class="dsmovie-card">
+                <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/pU9gkPTYcaIlZcIQYGABBZ81zY8.jpg" alt="jogos vorazes">
+                <div class="dsmovie-card-description">
+                    <h3>Jogos Vorazes</h3>
+                    <a class= "dsmovie-btn"href="form.html">Avaliar</a>
+                </div>
 
-    </h2>
+
+            </div>
+        </section>
+
+    </main>
 </body>
 
 </html>
