--- a/index.html
+++ b/index.html
@@ -31,7 +31,20 @@
                         <img src="https://www.themoviedb.org/t/p/original/9qtdUCHwVUMzOSxK27BNBBkKuOe.jpg" alt="jogos vorazes">
                         <div class="dsmovie-card-description">
                             <h3>Jogos Vorazes</h3>
-                            <a class= "dsmovie-btn"href="form.html">Avaliar</a>
+                            <div class="dsmovie-card-description-bottom">
+                                <h4>3.8</h4>
+                                <div>
+                                    <img src="img/star full.svg" alt="star">
+                                    <img src="img/star full.svg" alt="star">
+                                    <img src="img/star full.svg" alt="star">
+                                    <img src="img/star ralf.svg" alt="star">
+                                    <img src="img/star.svg" alt="star">
+                                </div>
+                                <p>10 avaliações</p>
+                                <a class= "dsmovie-btn"href="form.html">Avaliar</a>
+                                
+                            </div>
+
                         </div>    
                     </div>
                 </div>
