Polimento da listagem 1

--- a/form11.html
+++ b/form11.html
@@ -27,10 +27,10 @@
         <section id="dsmovie-form-section" class="container">
             <div class="container dsmovie-form-container">
                 <div>
-                    <div class="dsmovie-card">
-                        <img src="https://www.themoviedb.org/t/p/original/9qtdUCHwVUMzOSxK27BNBBkKuOe.jpg" alt="jogos vorazes">
-                        <div class="dsmovie-form-description">
-                            <h3>Jogos Vorazes</h3>
+                    <div lass="dsmovie-card">
+                        <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/npCPnwDyWfQltGfIZKN6WqeUXGI.jpg" alt="O Hobbit: A Desolação de Smaug">
+                        <div class="dsmovie-card-description">
+                            <h3>O Hobbit: A Desolação de Smaug</h3>
                         <form class="dsmovie-form">
                                 <div class="form-group dsmovie-form-group">
                                     <label for="email">Informe seu e-mail</label>
