--- a/form6.html
+++ b/form6.html
@@ -28,9 +28,9 @@
             <div class="container dsmovie-form-container">
                 <div>
                     <div class="dsmovie-card">
-                        <img src="https://www.themoviedb.org/t/p/original/9qtdUCHwVUMzOSxK27BNBBkKuOe.jpg" alt="jogos vorazes">
-                        <div class="dsmovie-form-description">
-                            <h3>Jogos Vorazes</h3>
+                        <img src="https://www.themoviedb.org/t/p/original/yCXmylJpsTwGz18jQjDMUmKfnfE.jpg" alt="Avatar: O Caminho da Água">
+                        <div class="dsmovie-card-description">
+                            <h3>Avatar: O Caminho da Água</h3>
                         <form class="dsmovie-form">
                                 <div class="form-group dsmovie-form-group">
                                     <label for="email">Informe seu e-mail</label>
