--- a/form8.html
+++ b/form8.html
@@ -28,9 +28,9 @@
             <div class="container dsmovie-form-container">
                 <div>
                     <div class="dsmovie-card">
-                        <img src="https://www.themoviedb.org/t/p/original/9qtdUCHwVUMzOSxK27BNBBkKuOe.jpg" alt="jogos vorazes">
-                        <div class="dsmovie-form-description">
-                            <h3>Jogos Vorazes</h3>
+                        <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/9pBv1BOSloAUgAkF0meJWdnbV4Q.jpg" alt="As Crônicas de Nárnia: Príncipe Caspian">
+                        <div class="dsmovie-card-description">
+                            <h3>As Crônicas de Nárnia: Príncipe Caspian</h3>
                         <form class="dsmovie-form">
                                 <div class="form-group dsmovie-form-group">
                                     <label for="email">Informe seu e-mail</label>
