Polimento da listagem 2

--- a/form11.html
+++ b/form11.html
@@ -27,7 +27,7 @@
         <section id="dsmovie-form-section" class="container">
             <div class="container dsmovie-form-container">
                 <div>
-                    <div lass="dsmovie-card">
+                    <div class="dsmovie-card">
                         <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/npCPnwDyWfQltGfIZKN6WqeUXGI.jpg" alt="O Hobbit: A Desolação de Smaug">
                         <div class="dsmovie-card-description">
                             <h3>O Hobbit: A Desolação de Smaug</h3>
