--- a/index.html
+++ b/index.html
@@ -32,12 +32,12 @@
                         <div class="dsmovie-card-description">
                             <h3>Jogos Vorazes</h3>
                             <div class="dsmovie-card-description-bottom">
-                                <h4>3.8</h4>
+                                <h4>4.0</h4>
                                 <div>
                                     <img src="img/star full.svg" alt="star">
                                     <img src="img/star full.svg" alt="star">
                                     <img src="img/star full.svg" alt="star">
-                                    <img src="img/star ralf.svg" alt="star">
+                                    <img src="img/star full.svg" alt="star">
                                     <img src="img/star.svg" alt="star">
                                 </div>
                                 <p>10 avaliações</p>
@@ -54,13 +54,13 @@
                         <div class="dsmovie-card-description">
                             <h3>Jogos Vorazes: Em Chamas</h3>
                             <div class="dsmovie-card-description-bottom">
-                                <h4>3.8</h4>
+                                <h4>4.7</h4>
                                 <div>
                                     <img src="img/star full.svg" alt="star">
                                     <img src="img/star full.svg" alt="star">
                                     <img src="img/star full.svg" alt="star">
+                                    <img src="img/star full.svg" alt="star">
                                     <img src="img/star ralf.svg" alt="star">
-                                    <img src="img/star.svg" alt="star">
                                 </div>
                                 <p>10 avaliações</p>
                                 <a class= "dsmovie-btn"href="form2.html">Avaliar</a>
@@ -75,13 +75,13 @@
                         <div class="dsmovie-card-description">
                             <h3>Jogos Vorazes: A Esperança - Parte 1</h3>
                             <div class="dsmovie-card-description-bottom">
-                                <h4>3.8</h4>
+                                <h4>4.5</h4>
                                 <div>
                                     <img src="img/star full.svg" alt="star">
                                     <img src="img/star full.svg" alt="star">
                                     <img src="img/star full.svg" alt="star">
+                                    <img src="img/star full.svg" alt="star">
                                     <img src="img/star ralf.svg" alt="star">
-                                    <img src="img/star.svg" alt="star">
                                 </div>
                                 <p>10 avaliações</p>
                                 <a class= "dsmovie-btn"href="form3.html">Avaliar</a>
@@ -96,13 +96,13 @@
                         <div class="dsmovie-card-description">
                             <h3>Jogos Vorazes: A Esperança - O Final</h3>
                             <div class="dsmovie-card-description-bottom">
-                                <h4>3.8</h4>
+                                <h4>4.6</h4>
                                 <div>
                                     <img src="img/star full.svg" alt="star">
                                     <img src="img/star full.svg" alt="star">
                                     <img src="img/star full.svg" alt="star">
+                                    <img src="img/star full.svg" alt="star">
                                     <img src="img/star ralf.svg" alt="star">
-                                    <img src="img/star.svg" alt="star">
                                 </div>
                                 <p>10 avaliações</p>
                                 <a class= "dsmovie-btn"href="form4.html">Avaliar</a>
@@ -117,13 +117,13 @@
                         <div class="dsmovie-card-description">
                             <h3>Avatar</h3>
                             <div class="dsmovie-card-description-bottom">
-                                <h4>3.8</h4>
+                                <h4>4.9</h4>
                                 <div>
                                     <img src="img/star full.svg" alt="star">
                                     <img src="img/star full.svg" alt="star">
                                     <img src="img/star full.svg" alt="star">
-                                    <img src="img/star ralf.svg" alt="star">
-                                    <img src="img/star.svg" alt="star">
+                                    <img src="img/star full.svg" alt="star">
+                                    <img src="img/star full.svg" alt="star">
                                 </div>
                                 <p>10 avaliações</p>
                                 <a class= "dsmovie-btn"href="form5.html">Avaliar</a>
@@ -138,13 +138,13 @@
                         <div class="dsmovie-card-description">
                             <h3>Avatar: O Caminho da Água</h3>
                             <div class="dsmovie-card-description-bottom">
-                                <h4>3.8</h4>
+                                <h4>4.6</h4>
                                 <div>
                                     <img src="img/star full.svg" alt="star">
                                     <img src="img/star full.svg" alt="star">
                                     <img src="img/star full.svg" alt="star">
+                                    <img src="img/star full.svg" alt="star">
                                     <img src="img/star ralf.svg" alt="star">
-                                    <img src="img/star.svg" alt="star">
                                 </div>
                                 <p>10 avaliações</p>
                                 <a class= "dsmovie-btn"href="form6.html">Avaliar</a>
@@ -159,13 +159,13 @@
                         <div class="dsmovie-card-description">
                             <h3>As Crônicas de Nárnia: O Leão, a Feiticeira e o Guarda-Roupa</h3>
                             <div class="dsmovie-card-description-bottom">
-                                <h4>3.8</h4>
+                                <h4>4.6</h4>
                                 <div>
                                     <img src="img/star full.svg" alt="star">
                                     <img src="img/star full.svg" alt="star">
                                     <img src="img/star full.svg" alt="star">
+                                    <img src="img/star full.svg" alt="star">
                                     <img src="img/star ralf.svg" alt="star">
-                                    <img src="img/star.svg" alt="star">
                                 </div>
                                 <p>10 avaliações</p>
                                 <a class= "dsmovie-btn"href="form7.html">Avaliar</a>
@@ -180,13 +180,13 @@
                         <div class="dsmovie-card-description">
                             <h3>As Crônicas de Nárnia: Príncipe Caspian</h3>
                             <div class="dsmovie-card-description-bottom">
-                                <h4>3.8</h4>
+                                <h4>4.0</h4>
                                 <div>
                                     <img src="img/star full.svg" alt="star">
                                     <img src="img/star full.svg" alt="star">
                                     <img src="img/star full.svg" alt="star">
+                                    <img src="img/star full.svg" alt="star">
                                     <img src="img/star ralf.svg" alt="star">
-                                    <img src="img/star.svg" alt="star">
                                 </div>
                                 <p>10 avaliações</p>
                                 <a class= "dsmovie-btn"href="form8.html">Avaliar</a>
@@ -222,13 +222,13 @@
                         <div class="dsmovie-card-description">
                             <h3>O Hobbit: Uma Jornada Inesperada</h3>
                             <div class="dsmovie-card-description-bottom">
-                                <h4>3.8</h4>
+                                <h4>4.3</h4>
                                 <div>
                                     <img src="img/star full.svg" alt="star">
                                     <img src="img/star full.svg" alt="star">
                                     <img src="img/star full.svg" alt="star">
+                                    <img src="img/star full.svg" alt="star">
                                     <img src="img/star ralf.svg" alt="star">
-                                    <img src="img/star.svg" alt="star">
                                 </div>
                                 <p>10 avaliações</p>
                                 <a class= "dsmovie-btn"href="form10.html">Avaliar</a>
@@ -244,13 +244,13 @@
                         <div class="dsmovie-card-description">
                             <h3>O Hobbit: A Desolação de Smaug</h3>
                             <div class="dsmovie-card-description-bottom">
-                                <h4>3.8</h4>
+                                <h4>4.7</h4>
                                 <div>
                                     <img src="img/star full.svg" alt="star">
                                     <img src="img/star full.svg" alt="star">
                                     <img src="img/star full.svg" alt="star">
+                                    <img src="img/star full.svg" alt="star">
                                     <img src="img/star ralf.svg" alt="star">
-                                    <img src="img/star.svg" alt="star">
                                 </div>
                                 <p>10 avaliações</p>
                                 <a class= "dsmovie-btn"href="form11.html">Avaliar</a>
@@ -265,13 +265,13 @@
                         <div class="dsmovie-card-description">
                             <h3>O Hobbit: A Batalha dos Cinco Exércitos</h3>
                             <div class="dsmovie-card-description-bottom">
-                                <h4>3.8</h4>
+                                <h4>4.3</h4>
                                 <div>
                                     <img src="img/star full.svg" alt="star">
                                     <img src="img/star full.svg" alt="star">
                                     <img src="img/star full.svg" alt="star">
+                                    <img src="img/star full.svg" alt="star">
                                     <img src="img/star ralf.svg" alt="star">
-                                    <img src="img/star.svg" alt="star">
                                 </div>
                                 <p>10 avaliações</p>
                                 <a class= "dsmovie-btn"href="form12.html">Avaliar</a>
