--- a/index.html
+++ b/index.html
@@ -25,6 +25,19 @@
   
     <main>
         <section id="dsmovie-card-list" class="container">
+
+            <div class="dsmovie-pagination-container">
+                <div class="dsmovie-pagination-box">
+                    <button disabled>
+                        <img src="img/arrow.svg" alt="volta">
+                    </button>
+                    <p>1 de 23</p>
+                    <button class="dsmovie-flip-horizontal">
+                        <img src="img/arrow.svg" alt="proxima">
+                    </button>
+
+                </div>
+            </div>
             <div class="row">
                 <div class="col-sm-6 col-lg-4 col-x1-3 nb-3">
                     <div class="dsmovie-card">
